# advai-x-cli

./: .gitignore  .npmignore  HOMEBREW_CORE.md  HOMEBREW_CORE_PR.md  README.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: advai-cli.rb  advai.rb
advai/: ai_client.py  cli.py  cli_manager.py  skills.py  tui.py
docs/: RELEASE_CHECKLIST.md
tests/: test_metadata.py
