[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advai-cli"
version = "1.0.1"
description = "Cross-platform AI Skill manager — one-click install / uninstall / list / update"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "advai" }]
dependencies = [
    "click>=8.1",
]

[project.scripts]
advai = "advai.cli:cli"

[project.urls]
Homepage = "https://github.com/Advai-X/advai-x-cli"
Issues = "https://github.com/Advai-X/advai-x-cli/issues"

[tool.setuptools]
packages = ["advai"]
