[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advai-cli"
version = "1.0.6"
description = "CLI for managing skills and external CLIs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "advai" }]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/Advai-X/advai-cli"
Repository = "https://github.com/Advai-X/advai-cli"
Issues = "https://github.com/Advai-X/advai-cli/issues"

[project.scripts]
advai = "advai.cli:cli"

[tool.setuptools]
packages = ["advai"]
